<?xml version="1.0"?>
<package format="2">
  <name>neato</name>
  <version>1.0.0</version>
  <description>Control a Neato Robot using ROS.</description>
  <maintainer email="brannon.vann@gmail.com">Brannon Vann</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/brannonvann/neato-ros</url>
  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
